MFC r346960: Retry upon NET_RT_IFLIST sysctl failure.

PR:	195191